<resources>
    <string name="app_name">ACS - PreCadastro</string>

    <!-- Strings for TextViews-->
    <string name="txt_default">...</string>
    <string name="txt_latitude">Latitude:</string>
    <string name="txt_longitude">Longitude:</string>
    <string name="txt_city">City:</string>
    <string name="txt_address">Address:</string>
    <string name="txt_user_name">txt_user_name</string>
    <string name="txt_user_details">txt_user_details</string>

    <!-- Strings for ButtonViews-->
    <string name="btn_ok">OK</string>
    <string name="btn_save">Save</string>

    <!-- Hint used on EditText -->
    <string name="hint_email">Enter with your number of SUS</string>
    <string name="hint_password">Enter with your password</string>

    <!-- General messages & errors -->
    <string name="msg_login_main">To confirm your login, use your SUS number and your password</string>
    <string name="err_connection_offline">Your Internet connection is offline</string>
    <string name="err_connection_unknown">Your Internet connection presented a unexpected error.</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- General titles -->
    <string name="title_reg_residence">Register residence</string>
    <string name="title_reg_person">Register person</string>
    <string name="title_accomp_residence">Accompaniment residence</string>
    <string name="title_accomp_person">Accompaniment person</string>
    <string name="title_menu_settings">Settings</string>
    <string name="title_nav_register">Register</string>
    <string name="title_nav_accompaniment">Accompaniment</string>
    <string name="title_nav_residence">Residence</string>
    <string name="title_nav_person">Person</string>

</resources>
