<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <fragment

        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.anail.geolocalizacao.MapActivity"
        android:layout_above="@+id/btnOk"
        android:layout_below="@+id/txtAddr" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_ok"
        android:id="@+id/btnOk"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/txt_latitude"
        android:id="@+id/txtLat"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:padding="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/txt_longitude"
        android:id="@+id/txtLong"
        android:layout_below="@+id/txtLat"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:padding="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/txtLatitude"
        android:text="@string/txt_default"
        android:layout_toRightOf="@+id/txtLong"
        android:layout_alignTop="@+id/txtLong"
        android:layout_alignBottom="@+id/txtLong"
        android:gravity="center_vertical"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/txtLongitude"
        android:text="@string/txt_default"
        android:layout_alignBottom="@+id/txtLat"
        android:layout_toRightOf="@+id/txtLong"
        android:layout_alignParentTop="true"
        android:gravity="center_vertical"
        android:layout_alignRight="@+id/txtLatitude"
        android:layout_alignEnd="@+id/txtLatitude" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/txt_address"
        android:id="@+id/txtAddr"
        android:layout_below="@+id/txtLong"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:padding="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/txtAddress"
        android:text="@string/txt_default"
        android:layout_alignTop="@+id/txtAddr"
        android:layout_alignLeft="@+id/txtLatitude"
        android:layout_alignStart="@+id/txtLatitude"
        android:layout_alignBottom="@+id/txtAddr"
        android:gravity="center_vertical"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>